fix link copy button on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -42,4 +42,5 @@ body {
 
 a {
   color: blue;
+  text-decoration: underline;
 }
